# zotero-cli

./: .gitignore  AGENTS.md  LITNOTES.md  README.md  pyproject.toml
.claude/agents/: facet-extractor.md
scripts/: weekly-discover.sh
src/zotero_cli/: __init__.py  cli.py  database.py  discover.py  facets.py  interactive.py  litnote.py  models.py  obsidian.py  suggest.py
tests/: __init__.py
